[gd_scene load_steps=4 format=4 uid="uid://bfe03csmbswxm"]

[ext_resource type="Script" path="res://shared/ui/intermissions/intermission_dialog.gd" id="1"]
[ext_resource type="VideoStream" path="res://acts/full_game/intermisions/tv.ogv" id="2"]
[ext_resource type="Theme" uid="uid://cd6xcm0r6ceqx" path="res://shared/assets/themes/btn_round.tres" id="3"]

[node name="IntermissionDialog" type="ColorRect"]
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.133333, 0.12549, 0.203922, 1)
script = ExtResource("1")
video_length = 15.0

[node name="VideoStreamPlayer" type="VideoStreamPlayer" parent="."]
unique_name_in_owner = true
layout_mode = 0
offset_right = 1920.0
offset_bottom = 1088.0
mouse_filter = 1
stream = ExtResource("2")
loop = true

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -76.0
offset_top = -81.0
offset_right = 76.0
offset_bottom = -15.0
grow_horizontal = 2
grow_vertical = 0
pivot_offset = Vector2(2.08165e-12, 2.08165e-12)
theme_override_constants/separation = 20

[node name="ReplayButton" type="Button" parent="HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(66, 66)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource("3")
theme_type_variation = &"repeat"

[node name="CloseButton" type="Button" parent="HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(66, 66)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource("3")
theme_type_variation = &"forward"

[node name="Timer" type="Timer" parent="."]
unique_name_in_owner = true
